<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.ThirdActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/third_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dip"
        android:layout_marginTop="1dip"
        android:layout_marginEnd="1dip"
        android:layout_marginBottom="1dip"
        android:background="@android:color/background_dark"
        android:text="@string/go_back"/>

    <TextView
        android:id="@+id/third_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weekly_forecast"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/third_subheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/for_requested_city"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/third_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/third_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textColor="@android:color/background_dark"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="@string/insert_city_name"/>

    <EditText
        android:id="@+id/third_city_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/city_name"
        />

    <Button
        android:id="@+id/third_button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="15dp"
        android:text="@string/show_forecast" />

    <ListView
        android:id="@+id/third_idListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

</LinearLayout>