<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context="cz.uhk.fim.outwittheweather.app.MainActivity">

    <Button
        android:id="@+id/main_button_7_days_gps"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dip"
        android:layout_marginTop="1dip"
        android:layout_marginEnd="1dip"
        android:layout_marginBottom="1dip"
        android:background="@android:color/background_dark"
        android:text="@string/show_week_forecast" />

    <Button
        android:id="@+id/main_button_city_forecast"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dip"
        android:layout_marginTop="1dip"
        android:layout_marginEnd="1dip"
        android:layout_marginBottom="1dip"
        android:background="@android:color/background_dark"
        android:text="@string/find_forecast_for_city" />

    <ScrollView
        android:id="@+id/main_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/main_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

        <LinearLayout
            android:id="@+id/main_icon_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_weather"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/main_subheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actual_weather_at_your_actual_location"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/main_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"/>

            <ProgressBar
                android:id="@+id/forecast_loading"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressTint="#FF0000" />

            <TextView
                android:id="@+id/main_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/main_weather_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/main_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/main_feels_like"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_linear_layout_dt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/main_dt_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/requested"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/main_dt_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_linear_layout_sunrise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/main_sunrise_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/sunrise"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/main_sunrise_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_linear_layout_sunset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/main_sunset_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/sunset"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/main_sunset_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_linear_layout_wind_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/main_wind_speed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/wind_speed"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/main_wind_speed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_linear_layout_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/main_pressure_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:text="@string/pressure"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/main_pressure_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_linear_layout_humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/main_humidity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/humidity"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/main_humidity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>